--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ body {
 .description {
     font-size: 18px;
     margin-bottom: 12px;
+    text-align: center;
 }
 .about li {
     font-weight: bold;
@@ -56,8 +57,12 @@ body {
     max-width: 720px;
     width: 100%;
     padding: 100px;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #666666;
     border-radius: 5px;
+    color: #fff;
+}
+.modal h2 {
+    margin-bottom: 15px;
 }
 
 .modal-close-icon {
