brand app is done

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,8 @@ body {
 
 .logo a {
     font-size: 30px;
+    display: flex;
+    justify-content: center;
 }
 .description {
     font-size: 18px;
